Praktikum 7: Manajemen Future dengan FutureBuilder "W11: Soal 13". dan "W11: Soal 14". Praktikum 8: Navigation route dengan Future Function "W11: Soal 15". dan "W11: Soal 16". Praktikum 9: Memanfaatkan async/await dengan Widget Dialog "W11: Soal 17".

--- a/codelab011_pemrograman_asynchronous/books/pubspec.yaml
+++ b/codelab011_pemrograman_asynchronous/books/pubspec.yaml
@@ -60,7 +60,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/Praktikum1/
+    - assets/images/Praktikum2/
+    - assets/images/Praktikum3/
+    - assets/images/Praktikum4/
+    - assets/images/Praktikum5/
+    - assets/images/Praktikum6/
+    - assets/images/Praktikum7/
+    - assets/images/Praktikum8/
+    - assets/images/Praktikum9/
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
